<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_apms_behavior_tree</name>
  <version>0.0.0</version>
  <description>Useful Tooling for Behavior Tree development</description>
  <maintainer email="mue.robin@icloud.com">Robin Müller</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp</depend>
  <depend>auto_apms_interfaces</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>tinyxml2_vendor</depend>
  <depend>generate_parameter_library</depend>
  <depend>auto_apms_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
